# CDT

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  Makefile  README.md  cdt_bindings.cpp  cdt_bindings_test.py  setup.py
CDT/: CMakeLists.txt
CDT/include/: CDTUtils.h  KDTree.h  LocatorKDTree.h  Triangulation.h
cdt3d/: __init__.py
data/: segments_1m.pcd  segments_1m.py  segments_1m_cut.pcd
